Fix Contrast error on join form

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -222,7 +222,7 @@ form label.sbs {
 
 form button {
     border: none;
-    background-color: var(--secondary);
+    background-color: var(--primary);
     color: white;
     border-radius: 1rem;
     padding: .75rem 1.5rem;
